add several dialog add password field component which allow user to reveal the password

--- a/src/app/domain-list/domain-list.component.html
+++ b/src/app/domain-list/domain-list.component.html
@@ -14,3 +14,7 @@
     No Domain Here
   </div>
 </div>
+
+<app-float-button (btnClick)="addDomain()">
+  <i class="plus icon"></i>
+</app-float-button>
