add several critical edit/add dialog.

--- a/src/app/dialog-frame/dialog-frame.component.html
+++ b/src/app/dialog-frame/dialog-frame.component.html
@@ -1,5 +1,5 @@
-<div class="dialog-action-bar" (click)="back()">
-  <div class="back-button">
+<div class="dialog-action-bar">
+  <div class="back-button" (click)="back()">
     <i class="left arrow icon"></i>
   </div>
   <div class="title">
