--- a/src/app/domain-portal/domain-portal.component.less
+++ b/src/app/domain-portal/domain-portal.component.less
@@ -17,7 +17,7 @@
   }
   .tab-content {
     height: 100%;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 1rem 3rem 1rem;
     overflow-x: hidden;
     overflow-y: auto;
   }
