--- a/src/app/action-bar/action-bar.component.less
+++ b/src/app/action-bar/action-bar.component.less
@@ -1,6 +1,6 @@
 @import "../../assets/variables.less";
 
-:host {
+app-action-bar {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -14,18 +14,31 @@
   z-index: 120;
   background: #fff;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
-}
 
-.back-button {
-  font-size: 1rem;
-  font-weight: 400;
-  color: #4f4f4f;
-  padding: 1rem;
-}
+  .back-button {
+    font-size: 1rem;
+    font-weight: 400;
+    color: #4f4f4f;
+    padding: 1rem;
+  }
 
-.actionbar-title {
-  font-size: 1.5rem;
-  font-weight: 600;
-  color: #383838;
-  margin-left: 1.5rem;
+  .actionbar-title {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #383838;
+    margin-left: 1.5rem;
+  }
+
+  .actionbar-right {
+    flex: 1 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    .right-control {
+      margin-right: 1.2rem;
+      color: #383838;
+      cursor: pointer;
+    }
+  }
 }
