--- a/src/app/domain-list/domain-list.component.less
+++ b/src/app/domain-list/domain-list.component.less
@@ -5,11 +5,15 @@
   .app-frame();
 }
 
+.ui.container {
+  height: 100%;
+}
+
 .domain-list {
   width: 100%;
   height: 100%;
   margin: 0;
-  padding: 1.5rem;
+  padding: 1.5rem 1.5rem 6.5rem 1.5rem;
   overflow-x: hidden;
   overflow-y: auto;
 }
