--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -1,7 +1,7 @@
 <div class="login-container" [@dialogVisibility]="state" (@dialogVisibility.done)="onAnimationDone($event)">
   <form class="ui form" [formGroup]="resetPasswordForm" (submit)="onSubmit()" [ngClass]="{error: hasError}">
     <div class="field" [ngClass]="{error: !!formErrors.password}">
-      <label>Password</label>
+      <label>New Password</label>
       <app-password-field placeholder="password" formControlName="password"></app-password-field>
     </div>
     <div class="field" [ngClass]="{error: !!formErrors.code}">
@@ -12,7 +12,7 @@
       <p *ngIf="!!formErrors.password">{{formErrors.password}}</p>
       <p *ngIf="!!formErrors.code">{{formErrors.code}}</p>
     </div>
-    <button class="ui primary button" [disabled]="resetPasswordForm.invalid">Register</button>
+    <button class="ui primary button" [disabled]="resetPasswordForm.invalid">Reset Password</button>
   </form>
   <div class="ui horizontal divider">
     Or
