--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -13,11 +13,12 @@
       <p *ngIf="!!formErrors.code">{{formErrors.code}}</p>
     </div>
     <button class="ui primary button" [disabled]="resetPasswordForm.invalid">Reset Password</button>
+    <button class="ui button" *ngIf="cancelable" (click)="cancel()">Cancel</button>
   </form>
-  <div class="ui horizontal divider">
+  <div class="ui horizontal divider" *ngIf="!cancelable">
     Or
   </div>
-  <div class="footer">
+  <div class="footer" *ngIf="!cancelable">
     <button class="ui button" (click)="onLogin()">Login</button>
   </div>
 </div>
