--- a/src/app/action-bar/action-bar.component.less
+++ b/src/app/action-bar/action-bar.component.less
@@ -39,6 +39,11 @@ app-action-bar {
       margin-right: 1.2rem;
       color: #383838;
       cursor: pointer;
+      //justify-content: flex-start;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
     }
   }
 }
