--- a/src/app/domain-portal/domain-portal.component.html
+++ b/src/app/domain-portal/domain-portal.component.html
@@ -1,11 +1,20 @@
 <app-action-bar backRoute="/">
   <div class="action-title">Edit: {{domain?.name}}</div>
-  <a class="right-control"
-     appConfirmDialog
-     dialogTitle="Delete Domain"
-     [dialogContent]="'Are you sure to delete this domain' + domain?.name + ' ? This cannot be undone.'"
-     (onConfirm)="deleteDomain()">
-    <i class="trash icon"></i>
+  <a class="right-control" (click)="openHelp()">
+    <i class="help circle icon"></i>
+  </a>
+  <a class="right-control ui top right pointing dropdown" uiDropdown="click">
+    <i class="ellipsis vertical icon"></i>
+    <div class="menu">
+      <div class="item"
+           appConfirmDialog
+           dialogTitle="Delete Domain"
+           [dialogContent]="'Are you sure to delete this domain' + domain?.name + ' ? This cannot be undone.'"
+           (onConfirm)="deleteDomain()">
+        <i class="trash icon"></i>
+        Delete Domain
+      </div>
+    </div>
   </a>
 </app-action-bar>
 <div class="ui container main-content" *ngIf="domain">
