--- a/src/app/domain-portal/transport/transport.component.html
+++ b/src/app/domain-portal/transport/transport.component.html
@@ -19,6 +19,10 @@
   </tbody>
 </table>
 
+<div class="ui inverted dimmer" [ngClass]="{active: isLoading}">
+  <div class="ui text loader">Loading</div>
+</div>
+
 <app-float-button (btnClick)="addTransport()">
   <i class="plus icon"></i>
 </app-float-button>
