--- a/src/app/dialog-frame/dialog-frame.component.less
+++ b/src/app/dialog-frame/dialog-frame.component.less
@@ -14,6 +14,17 @@ app-dialog-frame {
   border: 1px solid #c0c0c0;
   border-radius: 4px;
 
+  &.large {
+    width: 800px;
+    height: 640px;
+    @media (max-width: 800px), (max-height: 640px) {
+      width: 100%;
+      height: 100%;
+      border: none;
+      border-radius: 0;
+    }
+  }
+
   @media (max-width: 425px) {
     width: 100%;
     height: 100%;
