--- a/src/app/domain-portal/dkim/dkim.component.html
+++ b/src/app/domain-portal/dkim/dkim.component.html
@@ -22,6 +22,9 @@
   </tr>
   </tbody>
 </table>
+<div class="ui inverted dimmer" [ngClass]="{active: isLoading}">
+  <div class="ui text loader">Loading</div>
+</div>
 
 <app-float-button (btnClick)="editDkim()">
   <i class="write icon"></i>
